Changes: - Adding mvn wrapper - Adding tests - Updating README file